# benchmarklib

./: .gitignore  README.md  pyproject.toml
benchmarklib/: __init__.py  circuit_storage.py
benchmarklib/algorithms/: __init__.py  grover.py  prediction.py
benchmarklib/analysis/: __init__.py  advantage.py  fidelity.py  success_rate.py  success_rate_advantage.py
benchmarklib/compilers/: SYNTHESIS_DOCUMENTATION.md  __init__.py  base.py  classiq.py  compile_type.py  truth_table.py  xag.py
benchmarklib/core/: __init__.py  base.py  database.py  types.py
benchmarklib/databases/: __init__.py  backend_properties.py  clique_db.py  problem_storage.py
benchmarklib/pipeline/: DOCS.md  __init__.py  config.py  pass_managers.py  pipeline.py  pipeline_steps.py  registries.py  tmp.py
benchmarklib/pipeline/synthesis/: __init__.py  classiq_synthesis.py  clique_oracle.py  qmpc.py  synthesizer.py  truth_table.py  xag.py
benchmarklib/problems/: __init__.py  clique.py
benchmarklib/runners/: __init__.py  queue.py  resource_management.py
benchmarklib/utils/: circuit.py
example/: DB Example.ipynb  migrate_to_orm.ipynb  migrations.md
