[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarklib"
version = "0.1.0"
description = "Quantum computing benchmarking research library"
authors = [{name = "Niels Mandrus", email = "nmandrus1@gmail.com"},{name = "Erik Umble", email="erikumble@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "qiskit-ibm-runtime>=0.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "sqlalchemy>=2.0.43",
]

[project.optional-dependencies]
dev = [ "jupyter>=1.0.0", ]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarklib*"]

